# jibiiru

./: .gitignore  README.md
part1/: CMakeLists.txt
part1/include/: bus.h  common.h  cpu.h  instructions.h  stack.h
part1/lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  emu.c  instructions.c  io.c  ram.c  stack.c  timer.c
